--- a/Minecraft/SKSMPGP/packwiz/mods/ato.pw.toml
+++ b/Minecraft/SKSMPGP/packwiz/mods/ato.pw.toml
@@ -1,13 +1,13 @@
 name = "ATO - All the Ores"
-filename = "alltheores-1.9.9c-1.18.2-40.1.0.jar"
+filename = "alltheores-1.9.9d-1.18.2-40.1.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "c70c2cacff75933ed90b6e780ac8addc814c1001"
+hash = "b861a1a9a5fb1b000de55d7eb79d142957f88f52"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3845919
+file-id = 3860919
 project-id = 405593
