--- a/Minecraft/SKSMPGP/packwiz/mods/ato.pw.toml
+++ b/Minecraft/SKSMPGP/packwiz/mods/ato.pw.toml
@@ -1,13 +1,13 @@
 name = "ATO - All the Ores"
-filename = "alltheores-1.9.9d-1.18.2-40.1.0.jar"
+filename = "alltheores-1.9.9f-1.18.2-40.1.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "b861a1a9a5fb1b000de55d7eb79d142957f88f52"
+hash = "612b67b42e42ec22cfec2ad4f4a2eb5a6d254e7a"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3860919
+file-id = 3874623
 project-id = 405593
