--- a/Minecraft/SKSMPGP/packwiz/mods/chunk-loaders.pw.toml
+++ b/Minecraft/SKSMPGP/packwiz/mods/chunk-loaders.pw.toml
@@ -1,13 +1,13 @@
 name = "Chunk Loaders"
-filename = "chunkloaders-1.1.12-mc1.18.jar"
+filename = "chunkloaders-1.2.0-forge-mc1.18.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "62f3017d31348b74463793e333d5edcea0f0669c"
+hash = "5d870df821d82e12637e4a94842a3f2937f3df4b"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3732985
+file-id = 3872175
 project-id = 402924
