--- a/Minecraft/SKSMPGP/packwiz/mods/create-alloyed.pw.toml
+++ b/Minecraft/SKSMPGP/packwiz/mods/create-alloyed.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Alloyed"
-filename = "alloyed-1.18.2-v1.4a.jar"
+filename = "alloyed-1.18.2-v1.4b.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "23dc8dbfc22bd2795f4491e69e6354ea9dab5f17"
+hash = "fdd6b4e592ff831a69cfb5a48ba8d8db68f69650"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3867008
+file-id = 3871942
 project-id = 564792
